updates: * fix map details overflow / position

--- a/react/src/pages/map/MapPage.scss
+++ b/react/src/pages/map/MapPage.scss
@@ -76,10 +76,8 @@ $appearAboveMap: 1001;
   bottom: 0;
   display: flex;
   flex-direction: column;
-  // overflow: hidden;
   position: absolute;
   width: 100%;
-  margin-bottom: 23px;
 
   .MuiTableContainer-root {
     box-shadow: none;
@@ -105,12 +103,11 @@ $appearAboveMap: 1001;
   display: flex;
   flex-direction: column;
   height: 100%;
+  overflow-x: auto;
 }
 
 .map-detail-table-container {
   flex: 1 1 auto;
-  // fixme: why?
-  // overflow-x: hidden;
 }
 
 // must be at least this index to appear for full-screen dialog
